Assets, assets rates. Tezos rates. PubKey test. Reveal check
